my-apps/minecraft-utils-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-utils-api
  namespace: minecraft-utils-api
  labels:
    app.kubernetes.io/name: minecraft-utils-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft-utils-api
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft-utils-api
    spec:
      containers:
      - name: minecraft-utils-api
        image: ghcr.io/matthewshan/minecraft-utils-api:1fa500f
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
